# cosmic-wal

./: Cargo.toml  README.md
src/: colors.rs  config.rs  main.rs
