[package]
name = "cosmic-wal"
version = "0.1.0"
edition = "2024"

[dependencies]
# cosmic = "0.1.0"
serde_json = "1.0.140"
libcosmic = { git = "https://github.com/pop-os/libcosmic.git" }
cosmic-config = { git = "https://github.com/pop-os/libcosmic.git" }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic.git" }
serde = "1.0.219"
notify = "8.1.0"
tokio = {version = "1.46.1",features = ["full"]}
